[package]
name = "koldun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.3", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.0" }
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.24.0"
fixed-macro = "1.2"
embedded-graphics = "0.8.0"
heapless = "0.7.16"
tinytga = "0.5.0"

[dependencies.display-interface]
git = "https://github.com/chrismoos/display-interface"
branch = "rw-interface"


[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
# display-interface = { git = "https://github.com/chrismoos/display-interface", branch = "rw-interface" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
